# nextcloud-mcp-server

./: CLAUDE.md  Dockerfile  pyproject.toml  smithery.yaml  smithery_entrypoint.py
docs/: smithery-deployment.md
nextcloud_mcp_server/: context.py  smithery_server.py
